2008-11-30 Francesco Fumanti <francesco.fumanti@gmx.net>

	Store position and size to gconf for next start of onboard.
    
2008-11-29 Francesco Fumanti <francesco.fumanti@gmx.net>

	Fix infinite loop when resizing onboard window.

2008-11-27 Francesco Fumanti <francesco.fumanti@gmx.net>

	Make use of schemas moving keys from /apps/sok to /apps/onboard.

2008-11-27 Francesco Fumanti <francesco.fumanti@gmx.net>

	Add gconf schemas file.

2008-11-08 Francesco Fumanti <francesco.fumanti@gmx.net>

	Move .desktop files from debian folder to data folder.

2008-11-06 Francesco Fumanti <francesco.fumanti@gmx.net>

	Add my name to the AUTHORS file.

0.91.1 release - 28/2/08
    * typo

0.91 release - 27/2/08
    * Fixed trayicon.
    * Scanning mode no longer needs a restart to take effect.
    * Remove python-xml dependency.
    * Updated translations.

16/6/06
	* Reads key mapping from a second xml file.
	* Began sticky keys

17/6/06
	* Updated virtkey to accept keysysm
	* Removed flashy, but ultimately pointless mouse hover effects.
	* Cleaned up virtkey a bit (not enough)

18/6/06
	* Sticky now works, turns off after one click on a non sticky char.
	* Double click now activates super sticky.
	* Fiddled with resizing
	* Justified labels to top left so don't have to worry about centering.
	* Changed font size. 

20/6/06
	* Program totally restructured, detailed on wiki.
	* Keys now unstick when quit.
	* Some speedups and simplifications.  Code now a bit more readable.

21/6/06
	* Changed behaviour of sticky.  One click makes it temp stick, a further click makes it stick and yet another click will unstick it.
	* Pretty colours.  Key colour red from svg and background from .sok.

23/6/06
	* Further panes of keys now accesible by sidebar.  Flashy transparency.  Side tabs operate the same as sticky keys.

25/6/06
	* Shift or caps lock now changes the labels on the keys.  Labels specified in .sok file.

29/6/06 