@@ -1,5 +1,9 @@
 2008-11-30 Francesco Fumanti <francesco.fumanti@gmx.net>
 
+	Use correct gconf key name for the trayicon.
+    
+2008-11-30 Francesco Fumanti <francesco.fumanti@gmx.net>
+
 	Store position and size to gconf for next start of onboard.
     
 2008-11-29 Francesco Fumanti <francesco.fumanti@gmx.net>
